# Inference

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  dev-plan.md
.github/workflows/: ci.yml
candle-usage/: Cargo.toml  run_train.sh
candle-usage/src/: config.rs  lib.rs  load.rs  main.rs  mlp.rs  trainer.rs  transformer.rs
candle-usage/tests/: comb_model.rs  linear.rs  load_data.rs  mlp_test.rs  optim.rs  tensor.rs  transformer_test.rs
gpgpu/: readme.md
kernels/: Cargo.toml  build.rs  readme.md  vecadd.cu
kernels/src/: main.rs
kernels/src/tests/: cudarc_test.rs  mod.rs
models/: Cargo.toml
models/src/: gguf.rs  lib.rs  llama.rs  mlp.rs
models/tests/: engine_test.rs  gguf_test.rs  llama_test.rs  mod.rs
oxide/: readme.md
oxide/first/: .gitignore  Cargo.toml
oxide/first/src/: main.rs
oxide/src/: main.rs
scripts/: request.sh
server/: Cargo.toml
server/src/: chat_web.rs  main.rs
