[workspace]
members = ["candle-usage", "server"]
resolver = "2"

[workspace.dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

candle-nn = { version = "0.11.0", git = "https://github.com/huggingface/candle.git", features = [
    "cuda",
] }
candle-core = { version = "0.11.0", git = "https://github.com/huggingface/candle.git", features = [
    "cuda",
] }
