[workspace]
members = ["candle-usage", "server", "models", "kernels", "locals"]
resolver = "2"

[workspace.dependencies]
axum = "0.7"
tokenizers = { version = "0.22.0", features = ["http"] }
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

candle-transformers = { version = "0.11.0", git = "https://github.com/huggingface/candle.git", features = [
    "cuda",
] }
candle-nn = { version = "0.11.0", git = "https://github.com/huggingface/candle.git", features = [
    "cuda",
] }
candle-core = { version = "0.11.0", git = "https://github.com/huggingface/candle.git", features = [
    "cuda",
] }
