[package]
name = "candle-usage"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trainer"
path = "src/trainer.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
candle-nn = { workspace = true }
candle-core = { workspace = true }
clap = { version = "4", features = ["derive"] }
hf-hub = "0.5.0"
parquet = "59"
arrow = "59"
anyhow = "1.0.0"
tokenizers = { version = "0.21", features = ["http"] }
